upload_svc/kubes/service-custerip.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload-svc-service
  namespace: iot
  labels:
    app: upload_service
spec:
  ports:
    # needs to be the port running on the deployment/SS
  - port: 3001      # <1>
    name: web
  # Create a cluster IP without n actual IP address for it
  # headless service
  #clusterIP: None
  selector:
    app: upload-service-ss  # <2>
